-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 12, 13
-
Component/s: hotspot
-
b22
Shenandoah, like ZGC, needs to make sure that the oops that are in deoptimized frames are passed through the barriers. Otherwise deoptimization might sneak bad oops into frames, which would then proliferate into Java heap.
- relates to
-
JDK-8224626 Shenandoah: Elide barriers on uncommon traps
-
- Resolved
-
-
JDK-8306734 Shenandoah: Missing barriers on deoptimization path
-
- Resolved
-
-
JDK-8221766 Load-reference barriers for Shenandoah
-
- Resolved
-