8224522: Shenandoah should apply barriers on deoptimization

Reviewed-by: rkennke, zgu